Add new profile pic

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
       <!--meta tags -->
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="keywords" content="Make Over Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-         Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+      <meta name="keywords" content="Patricia, Fischer, association scores, association metrics, dependency parsing, German, Dutch, SORTS, test suite, challenge set" />
       <script>
          addEventListener("load", function () {
          	setTimeout(hideURLbar, 0);
@@ -140,11 +139,11 @@
             <div class="col-md-7 col-sm-7 abut-grid-w3ls">
                <h3> Where I come from, where I'm going to ...</h3>
                <div class="agile-info-text">
-                  <h4>Hi, I am a docotral student in Computational Linguistics at the University of Tübingen. With a background in language studies, I enjoy using computational analysis tools to learn more about language and extract information about language characteristics from large corpora. Computers can find patterns which escape the human eye, but we can direct them to what interests us the most. This is what I like spending my time on.
+                  <h4>Hi, I am a docotral student in Computational Linguistics at the University of Tübingen. With a background in language studies, I enjoy using computational analysis tools to learn more about language and extract information about language characteristics from large corpora.
                   </h4>
                </div>
                <div class="agile-info-text">
-                  <h4>Most of my programming I have done in <b>Java</b>. I am now widening my horizon in an unexpected direction, 'getting rusty' - learning <b>rust </b> - and will get more into <b>python</b> and <b>tensorflow</b> in the course of my thesis project. There, I will combine <b>parsing</b>  and <b>distributional semantics</b> to improve parser performance on ambiguity solving tasks for German, Dutch and English.
+                  <h4>In the first phase of my thesis project, I combined <b>parsing</b>  and <b>selection preferences</b> to improve parser performance on ambiguity solving tasks (PP attachment, subject-object resolution) for German and Dutch. The current second half of my thesis is devoted to neural network model introspection across different model architectures, in the case of parsing ranging from traditional Chen and Manning style parsers to Bi-LSTMs and language models such as BERT or RoBERTA-XLM. Most of my programming I do in <b>Rust</b>, except the neural networks which are written in <b>Python</b>.
                   </h4>
                </div>
                <div class="agile-info-text">
@@ -373,7 +372,7 @@
                            </div>
                            <div class="col-md-7 col-sm-7 col-xs-7 ser-img-wthree">
                               <h4>Scireum</h4>
-                              <p>At <a href="http://www.scireum.de/" target="_blank">scireum</a>, I worked on improving the search engine for the sellsite e-commerce platform by adding linguistic features. Programming was done in Java but also involved html to manipulate the website frontend.
+                              <p>At <a href="http://www.scireum.de/" target="_blank">scireum</a>, I worked on improving the search engine for the sellsite e-commerce platform by adding linguistic features. Programming was done in Java but also involved HTML to manipulate the website frontend.
                               </p>
                            </div>
                         </div>
@@ -389,36 +388,36 @@
       <div class="auto-bar" id="auto-bar">
          <div class="container">
             <h3 class="title clr">Programming<span class="sub-text"> Skills</span></h3>
-            <div class="w3l_about_bottom_grid_right bar-grids">
-               <h6>Java<span></span></h6>
-               <div class="progress">
-                  <div class="progress-bar progress-bar-striped active" style="width: 100%">
-                  </div>
+            	<div class="w3l_about_bottom_grid_right bar-grids">
+            		<h6>Rust<span></span></h6>
+            		<div class="progress">
+            			<div class="progress-bar progress-bar-striped active" style="width: 80%">
+            			</div>
                </div>
                <div class="mid-bar">
                   <h6>Python<span></span></h6>
                   <div class="progress">
-                     <div class="progress-bar progress-bar-striped active" style="width: 85%">
+                     <div class="progress-bar progress-bar-striped active" style="width: 60%">
                      </div>
                   </div>
                </div>
                <div class="mid-bar">
-	               	<h6>Rust<span></span></h6>
+	               	<h6>Java<span></span></h6>
     	           	<div class="progress">
-        	          <div class="progress-bar progress-bar-striped active" style="width: 75%">
+        	          <div class="progress-bar progress-bar-striped active" style="width: 55%">
              	     </div>
                		</div>
                </div>
                <div class="mid-bar">
 	               	<h6>R<span></span></h6>
     	           	<div class="progress">
-        	          <div class="progress-bar progress-bar-striped active" style="width: 60%">
+        	          <div class="progress-bar progress-bar-striped active" style="width: 20%">
              	     </div>
                		</div>
                </div>
 	           <h6>Html, CSS<span></span></h6>
     	       <div class="progress">
-        	     <div class="progress-bar progress-bar-striped active" style="width: 50%">
+        	     <div class="progress-bar progress-bar-striped active" style="width: 10%">
           	     </div>
            		</div>
             </div>
@@ -444,7 +443,7 @@
                <div class="col-md-3 col-sm-6 col-xs-6 profile">
                   <h4>Travelling</h4>
                   <h5>From the city to the countryside</h5>
-                  <h6>Stockholm - Dublin - Riga - <br/> Prague - Edinburgh <br/> <br/> Canada & USA </h6>
+                  <h6>Stockholm - Dublin - Riga - <br/> Prague - Edinburgh <br/> <br/> Canada - USA - Scotland </h6>
                </div>
             </div>
             <div class="clearfix"></div>
@@ -454,14 +453,14 @@
       <!--contact-->
       <div class="contact" id="contact">
          <h3 class="title clr">Get in<span class="sub-text"> Touch</span></h3>
-         <div class=" col-md-6 col-sm-6 col-xs-6 contact-icons text-center">
+         <div class="agile-info-text>
             <div class="gride-contact-agileinfo">
                <div class=" footer_grid_left">
                   <div class="col-md-3 col-sm-3 col-xs-3 icon_grid_left">
                      <span class="fa fa-map-marker" aria-hidden="true"></span>
                   </div>
                   <div class=" col-md-9 col-sm-9 col-xs-9 address-gried">
-                     <p>Wilhelmstraße 19<span>Office 3.24</span><span>72074 Tübingen Germany</span></p>
+                     <p>Wilhelmstraße 19<span>Office 1.05</span><span>72074 Tübingen Germany</span></p>
                   </div>
                   <div class="clearfix"> </div>
                </div>
@@ -470,7 +469,7 @@
                      <span class="fa fa-volume-control-phone" aria-hidden="true"></span>
                   </div>
                   <div class=" col-md-9  col-sm-9 col-xs-9 address-gried">
-                     <p>+49(0) 7071-29-73953</p>
+                     <p>+49(0) 7071-29-77314</p>
                   </div>
                   <div class="clearfix"> </div>
                </div>
@@ -480,7 +479,8 @@
                      <span class="fa fa-envelope" aria-hidden="true"></span>
                   </div>
                   <div class=" col-md-9 col-sm-9 col-xs-9 address-gried">
-                     <p><a href="mailto:patricia.fischer@uni-tuebingen.de">patricia [dot] fischer [at] sfs [dot] uni-tuebingen [dot] de</a>
+                     <p>
+                     	<a href="mailto:patricia.fischer@uni-tuebingen.de">patricia [dot] fischer [at] uni-tuebingen [dot] de</a>
                      </p>
                   </div>
                </div>
@@ -494,8 +494,7 @@
       <footer>
          <div class="container">
             <div class="col-md-7 header-side">
-               <p>© 
-                  2018 Patricia Fischer. All Rights Reserved | Design by <a href="http://www.W3Layouts.com" target="_blank">W3Layouts</a>
+               <p>© 2020 Patricia Fischer. All Rights Reserved | Design by <a href="http://www.W3Layouts.com" target="_blank">W3Layouts</a>
                </p>
             </div>
          </div>
