Add publication dates

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <!DOCTYPE html>
 <html lang="zxx">
    <head>
-      <title>Patricia Fischer - Computational Linguist</title>
+      <title>Patricia Beer - Computational Linguist</title>
       <!--meta tags -->
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="keywords" content="Patricia, Fischer, association scores, association metrics, dependency parsing, German, Dutch, SORTS, test suite, challenge set" />
+      <meta name="keywords" content="Patricia, Beer, Fischer, association scores, association metrics, selection preferences, selectional preferences, selectional restrictions, dependency parsing, German, Dutch, SORTS, test suite, challenge set" />
       <script>
          addEventListener("load", function () {
          	setTimeout(hideURLbar, 0);
@@ -44,7 +44,7 @@
                <div class="col-md-4 col-sm-4 col-xs-4 buttom-social-grids">
                </div>
                <div class="col-md-4 col-sm-4 col-xs-4 headder-w3">
-                  <h1><a href="index.html">Patricia Fischer</a></h1>
+                  <h1><a href="index.html">Patricia Beer (Fischer)</a></h1>
                   <h2><a href="index.html"></a></h2>
                </div>
                <div class="clearfix"> </div>
@@ -93,8 +93,8 @@
                      <div class="slider-img ">
                         <div class="container">
                            <div class="slider-info">
-                              <h4><span class="first-clr">C</span>omputational <span class="first-clr">L</span>inguistics</h4>
-                              <p>Computational Linguistics</p>
+                              <h4><span class="first-clr">N</span>eural <span class="first-clr">M</span>odel <span class="first-clr">I</span>ntrospection</h4>
+                              <p>Neural Model Introspection</p>
                            </div>
                         </div>
                      </div>
@@ -113,8 +113,8 @@
                      <div class="slider-img">
                         <div class="container">
                            <div class="slider-info">
-                              <h4><span class="first-clr">O</span>pinion and <span class="first-clr">D</span>ata <span class="first-clr">M</span>ining</h4>
-                              <p>Opinion and Data Mining</p>
+                              <h4><span class="first-clr">B</span>ig <span class="first-clr">D</span>ata <span class="first-clr">A</span>nalysis</h4>
+                              <p>Big Data Analysis</p>
                            </div>
                         </div>
                      </div>
@@ -137,13 +137,12 @@
                <div class="clearfix"> </div>
             </div>
             <div class="col-md-7 col-sm-7 abut-grid-w3ls">
-               <h3> Where I come from, where I'm going to ...</h3>
                <div class="agile-info-text">
                   <h4>Hi, I am a docotral student in Computational Linguistics at the University of Tübingen. With a background in language studies, I enjoy using computational analysis tools to learn more about language and extract information about language characteristics from large corpora.
                   </h4>
                </div>
                <div class="agile-info-text">
-                  <h4>In the first phase of my thesis project, I combined <b>parsing</b>  and <b>selection preferences</b> to improve parser performance on ambiguity solving tasks (PP attachment, subject-object resolution) for German and Dutch. The current second half of my thesis is devoted to neural network model introspection across different model architectures, in the case of parsing ranging from traditional Chen and Manning style parsers to Bi-LSTMs and language models such as BERT or RoBERTA-XLM. Most of my programming I do in <b>Rust</b>, except the neural networks which are written in <b>Python</b>.
+                  <h4>In the first phase of my thesis project, I combined <b>parsing</b>  and <b>selectional preferences</b> to improve parser performance on ambiguity solving tasks such as PP attachment and subject-object resolution for German and Dutch. The current second half of my thesis is devoted to neural network model introspection across different model architectures. I created large task-specific test suites (<a href="https://github.com/DiveFish/SORTS" target="_blank"><font color="black">SORTS</font></a> for subject-object resolution and <a href="https://github.com/DiveFish/PPATS" target="_blank"><font color="black">PPATS</font></a> for PP attachment) with detailed linguistic annotations to test the capabilities of parser architectures ranging from traditional Chen-and-Manning-style parsers to BiLSTMs and language models such as BERT or XLM-RoBERTa.
                   </h4>
                </div>
                <div class="agile-info-text">
@@ -204,15 +203,28 @@
                <div class= "about-grid">
                   <div class="col-md-3 col-sm-2 about-gd">
                      <div class="about-gd-left">
-                        <h5>2020</h5>
+                        <h5><font color="white"><i style="font-size:24px" class="fa">SPACE</i></font></h5>
+                     </div>
+                  </div>
+                  <div class="col-md-4 col-sm-4 about-gd-right"></div>
+                  <div class="col-md-5 col-sm-6 about-right-histy">
+                     <p></p>
+                  </div>
+                    <div class="clearfix"> </div>
+               </div>
+               <div class= "about-grid">
+                  <div class="col-md-3 col-sm-2 about-gd">
+                     <div class="about-gd-left">
+                        <h5>2021</h5>
                      </div>
                   </div>
                   <div class="col-md-4 col-sm-4 about-gd-right">
+                        <a href="https://doi.org/10.1515/9783110731514-019" target="_blank"><font color="black"><i style="font-size:24px" class="fa">&#xf1c1;</i></font></i></a>
                      <h6>
                      </h6>
                   </div>
                   <div class="col-md-5 col-sm-6 about-right-histy">
-                     <p>Erhard Hinrichs, Patricia Fischer and Yana Strakatova (2020). Rover und TüNDRA: Such- und Visualisierungsplattformen für Wortnetze und Baumbanken. To appear in: Jahrbuch des Instituts für Deutsche Sprache.</p>
+                     <p>Erhard Hinrichs, Patricia Fischer and Yana Strakatova (2021). Rover und TüNDRA: Such- und Visualisierungsplattformen für Wortnetze und Baumbanken. In Henning Lobin, Andreas Witt and Angelika Wöllstein (editors): Deutsch in Europa, Berlin, Boston: De Gruyter, pp.323-328.</p>
                   </div>
                	  <div class="clearfix"> </div>
                </div>
@@ -229,6 +241,37 @@
                   </div>
                	  <div class="clearfix"> </div>
                </div>
+
+               <div class= "about-grid">
+                  <div class="col-md-3 col-sm-2 about-gd">
+                     <div class="about-gd-left">
+                        <h5>2020</h5>
+                     </div>
+                  </div>
+                  <div class="col-md-4 col-sm-4 about-gd-right">
+                        <a href="https://www.aclweb.org/anthology/2020.coling-main.269.pdf" target="_blank"><font color="black"><i style="font-size:24px" class="fa">&#xf1c1;</i></font></i></a>
+                     <h6>
+                     </h6>
+                  </div>
+                  <div class="col-md-5 col-sm-6 about-right-histy">
+                     <p>Patricia Fischer, Daniël de Kok and Erhard Hinrichs (2020). When Beards Start Shaving Men: A Subject-object Resolution Test Suite for Morpho-syntactic and Semantic Model Introspection. In: Proceedings of the 28th International Conference on Computational Linguistics (COLING), pp.3019–3035.</p>
+                  </div>
+                    <div class="clearfix"> </div>
+               </div>
+
+               <div class= "about-grid">
+                  <div class="col-md-3 col-sm-2 about-gd">
+                     <div class="about-gd-left">
+                        <h5><font color="white"><i style="font-size:24px" class="fa">SPACE</i></font></h5>
+                     </div>
+                  </div>
+                  <div class="col-md-4 col-sm-4 about-gd-right"></div>
+                  <div class="col-md-5 col-sm-6 about-right-histy">
+                     <p></p>
+                  </div>
+               	  <div class="clearfix"> </div>
+               </div>
+               
                <div class= "about-grid">
                   <div class="col-md-3 col-sm-2 about-gd">
                      <div class="about-gd-left">
@@ -241,7 +284,7 @@
                      </h6>
                   </div>
                   <div class="col-md-5 col-sm-6 about-right-histy">
-                     <p>Patricia Fischer, Sebastian Pütz, and Daniël de Kok (2019). Association Metrics in Neural Transition-Based Dependency Parsing, in: Proceedings of the Fifth International Conference on Dependency Linguistics (Depling, SyntaxFest 2019), p.181–189.</p>
+                     <p>Patricia Fischer, Sebastian Pütz, and Daniël de Kok (2019). Association Metrics in Neural Transition-Based Dependency Parsing, in: Proceedings of the 5th International Conference on Dependency Linguistics (Depling, SyntaxFest 2019), pp.181–189.</p>
                   </div>
                	  <div class="clearfix"> </div>
                </div>
@@ -267,11 +310,11 @@
                   </div>
                   <div class="col-md-4 col-sm-4 about-gd-right">
                      <h6>
-                        <a href="pdfs/distributional-regularities-verbs.pdf" target="_blank"><font color="black"><i style="font-size:24px" class="fa">&#xf1c1;</i></font></i></a>
+                        <a href="https://www.aclweb.org/anthology/W17-7603.pdf" target="_blank"><font color="black"><i style="font-size:24px" class="fa">&#xf1c1;</i></font></i></a>
                      </h6>
                   </div>
                   <div class="col-md-5 col-sm-6 about-right-histy">
-                     <p>Daniël de Kok, Patricia Fischer, Corina Dima, and Erhard Hinrichs (2018). Distributional Regularities of Verbs and Verbal Adjectives: Treebank Evidence and Broader Implications, in: Proceedings of the Sixteenth International Workshop on Treebanks and Linguistic Theories (TLT16), p.1-9.</p>
+                     <p>Daniël de Kok, Patricia Fischer, Corina Dima, and Erhard Hinrichs (2018). Distributional Regularities of Verbs and Verbal Adjectives: Treebank Evidence and Broader Implications, in: Proceedings of the 16th International Workshop on Treebanks and Linguistic Theories (TLT16), pp.1-9.</p>
                   </div>
                </div>
 
@@ -428,22 +471,18 @@
          <div class="container">
             <h3 class="title">Interests<span class="sub-text"> and Hobbies</span></h3>
             <div class="pt-md">
-               <div class=" col-md-3 col-sm-6 col-xs-6 profile">
-                  <h4>Literature</h4>
-                  <h6>Reading - Writing - Listening <br/> Fiction - Magazines </h6>
-               </div>
-               <div class="col-md-3 col-sm-6 col-xs-6 profile">
-                  <h4>Photography</h4>
-                  <h6>Take a look at my pics and image writings on <a href="https://imaginwords.wordpress.com/" target="_blank"><font color="black">ImagInWords</font></a></h6>
-               </div>
                <div class="col-md-3 col-sm-6 col-xs-6 profile">
                   <h4>Sports</h4>
-                  <h6>Jogging - Biking - Gliding - Salsa</h6>
+                  <h6>Gliding - Yoga - Biking </h6>
                </div>
                <div class="col-md-3 col-sm-6 col-xs-6 profile">
                   <h4>Travelling</h4>
                   <h5>From the city to the countryside</h5>
-                  <h6>Stockholm - Dublin - Riga - <br/> Prague - Edinburgh <br/> <br/> Canada - USA - Scotland </h6>
+                  <h6>Stockholm - Dublin - Riga - <br/> Budapest - Prague - Edinburgh <br/> <br/> Canada - USA - Scotland </h6>
+               </div>
+               <div class=" col-md-3 col-sm-6 col-xs-6 profile">
+                  <h4>Leisure</h4>
+                  <h6>Reading - Writing - Listening <br/> Photography </h6>
                </div>
             </div>
             <div class="clearfix"></div>
@@ -480,7 +519,7 @@
                   </div>
                   <div class=" col-md-9 col-sm-9 col-xs-9 address-gried">
                      <p>
-                     	<a href="mailto:patricia.fischer@uni-tuebingen.de">patricia [dot] fischer [at] uni-tuebingen [dot] de</a>
+                     	<a href="mailto:patricia.beer@uni-tuebingen.de">patricia [dot] beer [at] uni-tuebingen [dot] de</a>
                      </p>
                   </div>
                </div>
@@ -494,7 +533,7 @@
       <footer>
          <div class="container">
             <div class="col-md-7 header-side">
-               <p>© 2020 Patricia Fischer. All Rights Reserved | Design by <a href="http://www.W3Layouts.com" target="_blank">W3Layouts</a>
+               <p>© 2020 Patricia Beer. All Rights Reserved | Design by <a href="http://www.W3Layouts.com" target="_blank">W3Layouts</a>
                </p>
             </div>
          </div>
