--- a/index.html
+++ b/index.html
@@ -219,6 +219,35 @@
                      </div>
                   </div>
                   <div class="col-md-4 col-sm-4 about-gd-right">
+                        <a href="pdfs/fast-depparse.pdf" target="_blank"><font color="black"><i style="font-size:24px" class="fa">&#xf1c1;</i></font></i></a>
+                     <h6>
+                     </h6>
+                  </div>
+                  <div class="col-md-5 col-sm-6 about-right-histy">
+                     <p>Daniël de Kok and Patricia Beer (2021). Fast and accurate dependency parsing for Dutch and German. In Computational Linguistics in the Netherlands.</p>
+                  </div>
+               	  <div class="clearfix"> </div>
+               </div>
+
+               <div class= "about-grid">
+                  <div class="col-md-3 col-sm-2 about-gd">
+                     <div class="about-gd-left">
+                        <h5><font color="white"><i style="font-size:24px" class="fa">SPACE</i></font></h5>
+                     </div>
+                  </div>
+                  <div class="col-md-4 col-sm-4 about-gd-right"></div>
+                  <div class="col-md-5 col-sm-6 about-right-histy">
+                     <p></p>
+                  </div>
+                    <div class="clearfix"> </div>
+               </div>
+               <div class= "about-grid">
+                  <div class="col-md-3 col-sm-2 about-gd">
+                     <div class="about-gd-left">
+                        <h5></h5>
+                     </div>
+                  </div>
+                  <div class="col-md-4 col-sm-4 about-gd-right">
                         <a href="https://doi.org/10.1515/9783110731514-019" target="_blank"><font color="black"><i style="font-size:24px" class="fa">&#xf1c1;</i></font></i></a>
                      <h6>
                      </h6>
